crates/pgls_pretty_print/tests/snapshots/multi/tests__portals_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/portals.sql
snapshot_kind: text
---
BEGIN;

DECLARE "foo1" SCROLL CURSOR FOR SELECT * FROM tenk1 ORDER BY unique2;;

DECLARE "foo2" SCROLL CURSOR FOR SELECT * FROM tenk2;;

DECLARE "foo3" SCROLL CURSOR FOR SELECT * FROM tenk1 ORDER BY unique2;;

DECLARE "foo4" SCROLL CURSOR FOR SELECT * FROM tenk2;;

DECLARE "foo5" SCROLL CURSOR FOR SELECT * FROM tenk1 ORDER BY unique2;;

DECLARE "foo6" SCROLL CURSOR FOR SELECT * FROM tenk2;;

DECLARE "foo7" SCROLL CURSOR FOR SELECT * FROM tenk1 ORDER BY unique2;;

DECLARE "foo8" SCROLL CURSOR FOR SELECT * FROM tenk2;;

DECLARE "foo9" SCROLL CURSOR FOR SELECT * FROM tenk1 ORDER BY unique2;;

DECLARE "foo10" SCROLL CURSOR FOR SELECT * FROM tenk2;;

DECLARE "foo11" SCROLL CURSOR FOR SELECT * FROM tenk1 ORDER BY unique2;;

DECLARE "foo12" SCROLL CURSOR FOR SELECT * FROM tenk2;;

DECLARE "foo13" SCROLL CURSOR FOR SELECT * FROM tenk1 ORDER BY unique2;;

DECLARE "foo14" SCROLL CURSOR FOR SELECT * FROM tenk2;;

DECLARE "foo15" SCROLL CURSOR FOR SELECT * FROM tenk1 ORDER BY unique2;;

DECLARE "foo16" SCROLL CURSOR FOR SELECT * FROM tenk2;;

DECLARE "foo17" SCROLL CURSOR FOR SELECT * FROM tenk1 ORDER BY unique2;;

DECLARE "foo18" SCROLL CURSOR FOR SELECT * FROM tenk2;;

DECLARE "foo19" SCROLL CURSOR FOR SELECT * FROM tenk1 ORDER BY unique2;;

DECLARE "foo20" SCROLL CURSOR FOR SELECT * FROM tenk2;;

DECLARE "foo21" SCROLL CURSOR FOR SELECT * FROM tenk1 ORDER BY unique2;;

DECLARE "foo22" SCROLL CURSOR FOR SELECT * FROM tenk2;;

DECLARE "foo23" SCROLL CURSOR FOR SELECT * FROM tenk1 ORDER BY unique2;;

FETCH NEXT FROM foo1;

FETCH FORWARD 2 FROM foo2;

FETCH FORWARD 3 FROM foo3;

FETCH FORWARD 4 FROM foo4;

FETCH FORWARD 5 FROM foo5;

FETCH FORWARD 6 FROM foo6;

FETCH FORWARD 7 FROM foo7;

FETCH FORWARD 8 FROM foo8;

FETCH FORWARD 9 FROM foo9;

FETCH FORWARD 10 FROM foo10;

FETCH FORWARD 11 FROM foo11;

FETCH FORWARD 12 FROM foo12;

FETCH FORWARD 13 FROM foo13;

FETCH FORWARD 14 FROM foo14;

FETCH FORWARD 15 FROM foo15;

FETCH FORWARD 16 FROM foo16;

FETCH FORWARD 17 FROM foo17;

FETCH FORWARD 18 FROM foo18;

FETCH FORWARD 19 FROM foo19;

FETCH FORWARD 20 FROM foo20;

FETCH FORWARD 21 FROM foo21;

FETCH FORWARD 22 FROM foo22;

FETCH FORWARD 23 FROM foo23;

FETCH PRIOR FROM foo23;

FETCH BACKWARD 2 FROM foo22;

FETCH BACKWARD 3 FROM foo21;

FETCH BACKWARD 4 FROM foo20;

FETCH BACKWARD 5 FROM foo19;

FETCH BACKWARD 6 FROM foo18;

FETCH BACKWARD 7 FROM foo17;

FETCH BACKWARD 8 FROM foo16;

FETCH BACKWARD 9 FROM foo15;

FETCH BACKWARD 10 FROM foo14;

FETCH BACKWARD 11 FROM foo13;

FETCH BACKWARD 12 FROM foo12;

FETCH BACKWARD 13 FROM foo11;

FETCH BACKWARD 14 FROM foo10;

FETCH BACKWARD 15 FROM foo9;

FETCH BACKWARD 16 FROM foo8;

FETCH BACKWARD 17 FROM foo7;

FETCH BACKWARD 18 FROM foo6;

FETCH BACKWARD 19 FROM foo5;

FETCH BACKWARD 20 FROM foo4;

FETCH BACKWARD 21 FROM foo3;

FETCH BACKWARD 22 FROM foo2;

FETCH BACKWARD 23 FROM foo1;

CLOSE foo1;

CLOSE foo2;

CLOSE foo3;

CLOSE foo4;

CLOSE foo5;

CLOSE foo6;

CLOSE foo7;

CLOSE foo8;

CLOSE foo9;

CLOSE foo10;

CLOSE foo11;

CLOSE foo12;

SELECT
  name,
  statement,
  is_holdable,
  is_binary,
  is_scrollable
FROM
  pg_cursors
ORDER BY 1;

COMMIT;

SELECT name, statement, is_holdable, is_binary, is_scrollable FROM pg_cursors;

BEGIN;

DECLARE "foo24" NO SCROLL CURSOR FOR SELECT * FROM tenk1 ORDER BY unique2;;

FETCH NEXT FROM foo24;

FETCH PRIOR FROM foo24;

COMMIT;

BEGIN;

DECLARE "foo24" NO SCROLL CURSOR FOR SELECT * FROM tenk1 ORDER BY unique2;;

FETCH NEXT FROM foo24;

FETCH ABSOLUTE 2 FROM foo24;

FETCH ABSOLUTE 1 FROM foo24;

COMMIT;

SELECT name, statement, is_holdable, is_binary, is_scrollable FROM pg_cursors;

BEGIN;
